--- a/changelog
+++ b/changelog
@@ -1,11 +1,18 @@
+2018-01-01 {
+	+ added max tracing depth
+	* output format tweak
+}
+
+2017-12-20 to 2017-12-31 missing
+
 2017-12-19 {
-    + added changelog
-    * updated onto github
-    * fixed the bug that when two or more targets uses the same sources and
-        diffrent compiler flags, only the first compiler's settings will be
-        applied
-    * fixed the bug that if user doesn't indicate flag in module compiler
-        or linker, the program will crash
-    + added default task option
-    + changed option parser to boost::program_options
+	+ added changelog
+	* updated onto github
+	* fixed the bug that when two or more targets uses the same sources and
+		diffrent compiler flags, only the first compiler's settings will be
+		applied
+	* fixed the bug that if user doesn't indicate flag in module compiler
+		or linker, the program will crash
+	+ added default task option
+	+ changed option parser to boost::program_options
 }
