--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+2018-01-06 {
+	* changed output style
+}
+
+2018-01-05 {
+	* fixed "src" path and other bugs
+}
+
 2018-01-04 {
 	* removed dedumplicate operation in merging modules
 	* changed string container from vector to list
